objects/Case_Line_Items__c.object
<CustomObject>
    <fields>
        <fullName>Monogram_Font_Style__c</fullName>
        <label>Monogram Font Style</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Monogram_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Block 1</fullName>
                </value>
                <value>
                    <fullName>Block 2</fullName>
                </value>
                <value>
                    <fullName>Circle</fullName>
                </value>
                <value>
                    <fullName>Deco</fullName>
                </value>
                <value>
                    <fullName>Script 1</fullName>
                </value>
                <value>
                    <fullName>Script 2</fullName>
                </value>
                <value>
                    <fullName>Single Block</fullName>
                </value>
                <value>
                    <fullName>Single Script</fullName>
                </value>
                <value>
                    <fullName>Classic Block</fullName>
                </value>
                <value>
                    <fullName>Classic Script</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Modern</fullName>
                </value>
                <value>
                    <fullName>Modern Script</fullName>
                </value>
                <value>
                    <fullName>Typewriter</fullName>
                </value>
                <value>
                    <fullName>Varsity</fullName>
                </value>
                <value>
                    <fullName>Vintage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monogram_Text__c</fullName>
        <label>Monogram Text</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monogram_Type__c</fullName>
        <label>Monogram Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Baby &amp; Child</fullName>
                </value>
                <value>
                    <fullName>RH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monogram_able__c</fullName>
        <formula>CW_SKU_ID__r.Monogram_able__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monogram-able</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Company__c</fullName>
        <formula>Ship_To__r.New_Company__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Ship_to_Address_1__c</fullName>
        <formula>Ship_To__r.New_Ship_to_Address_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Ship to Address 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Ship_to_Address_2__c</fullName>
        <formula>Ship_To__r.New_Ship_to_Address_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Ship to Address 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Ship_to_Address__c</fullName>
        <formula>New_Company__c + BR() + New_Ship_to_Address_1__c + &quot; &quot; + New_Ship_to_Address_2__c + BR() +  New_Ship_to_City__c  + &quot;, &quot; +  New_Ship_to_State__c  + &quot;, &quot; +  New_Ship_to_Zip__c  + BR() +  New_Ship_to_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Ship to Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Ship_to_City__c</fullName>
        <formula>Ship_To__r.New_Ship_to_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Ship to City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Ship_to_Country__c</fullName>
        <formula>Ship_To__r.New_Ship_to_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Ship to Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Ship_to_Day_Phone__c</fullName>
        <formula>Ship_To__r.New_Ship_to_Day_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Ship to Day Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Ship_to_Email__c</fullName>
        <formula>Ship_To__r.New_Ship_to_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Ship to Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Ship_to_First_Name__c</fullName>
        <formula>Ship_To__r.New_Ship_to_First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Ship to First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Ship_to_Last_Name__c</fullName>
        <formula>Ship_To__r.New_Ship_to_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Ship to Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Ship_to_Name__c</fullName>
        <formula>New_Ship_to_Last_Name__c  + &quot;, &quot; + New_Ship_to_First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Ship to Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Ship_to_Night_Phone__c</fullName>
        <formula>Ship_To__r.New_Ship_to_Night_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Ship to Night Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Ship_to_State__c</fullName>
        <formula>Ship_To__r.New_Ship_to_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Ship to State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Ship_to_Zip__c</fullName>
        <formula>Ship_To__r.New_Ship_to_Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Ship to Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Charge_Replacement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Charge Replacement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_Days_Since_Previous_Notification__c</fullName>
        <formula>Current_Available_Date__c - Previous_Available_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number Days Since Previous Notification</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Delivery_Failures__c</fullName>
        <label>Number of Delivery Failures</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Total_Days_Delayed__c</fullName>
        <formula>Current_Available_Date__c  -  Original_Available_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Total Days Delayed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Issue__c</fullName>
        <label>Order Issue</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Modify_Order_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Address Change</fullName>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
                <value>
                    <fullName>Confirmation</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>Ship Via Change</fullName>
                </value>
                <value>
                    <fullName>Tracking</fullName>
                </value>
                <value>
                    <fullName>WISMO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Quantity__c</fullName>
        <label>Order Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Reserve_Date__c</fullName>
        <label>Order Reserve Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Number</label>
        <referenceTo>RH_Order__c</referenceTo>
        <relationshipLabel>Case Line Items</relationshipLabel>
        <relationshipName>Case_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Available_Date__c</fullName>
        <label>Original Available Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Line_Requested_Percentage__c</fullName>
        <inlineHelpText>Enter the percentage that you are giving for the accommodation</inlineHelpText>
        <label>Requested Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Other_Notes__c</fullName>
        <label>Other Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Out_of_Policy_Return__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, the return item ship date exceeds the RH Return Policy.</inlineHelpText>
        <label>Out of Policy Return</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Line_Status__c</fullName>
        <label>PO Line Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In-Transit</fullName>
                </value>
                <value>
                    <fullName>Not In-Transit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Needed__c</fullName>
        <label>Partner Needed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DC - Baltimore 98</fullName>
                </value>
                <value>
                    <fullName>DC - Dallas 96</fullName>
                </value>
                <value>
                    <fullName>DC - Mira Loma 97</fullName>
                </value>
                <value>
                    <fullName>DC - Ohio 89</fullName>
                </value>
                <value>
                    <fullName>Home Office</fullName>
                </value>
                <value>
                    <fullName>SP&amp;I</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Available_Date__c</fullName>
        <inlineHelpText>Most recent availability date communicated to the customer at the time the case line was created.</inlineHelpText>
        <label>Previous Available Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Price_Override_Amount__c</fullName>
        <label>Price Override Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Override_Reason__c</fullName>
        <label>Price Override Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>G - Price Adjustment</fullName>
                </value>
                <value>
                    <fullName>Z - Accommodation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_Override_Type__c</fullName>
        <label>Price Override Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>% off</fullName>
                </value>
                <value>
                    <fullName>Amt off</fullName>
                </value>
                <value>
                    <fullName>New Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Request__c</fullName>
        <label>Primary Request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Address Change</fullName>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
                <value>
                    <fullName>Gift Box</fullName>
                </value>
                <value>
                    <fullName>Monogramming</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Ship Via Change</fullName>
                </value>
                <value>
                    <fullName>Where is My Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity_Returned__c</fullName>
        <label>Quantity Returned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_being_Reordered__c</fullName>
        <label>Quantity Being Reordered</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RH_Order_Number__c</fullName>
        <description>Do not use.</description>
        <formula>Line_Number__r.RH_Order_Number__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Not_Released__c</fullName>
        <label>Reason Not Released</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Not Successfully Processed</fullName>
                </value>
                <value>
                    <fullName>CW Notes State Line Not To Be Released</fullName>
                </value>
                <value>
                    <fullName>Other Special Circumstance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_Notes__c</fullName>
        <label>Reason Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assembly Instructions</fullName>
                </value>
                <value>
                    <fullName>Care Instructions</fullName>
                </value>
                <value>
                    <fullName>Dimensions</fullName>
                </value>
                <value>
                    <fullName>Electrical</fullName>
                </value>
                <value>
                    <fullName>Errors</fullName>
                </value>
                <value>
                    <fullName>Item Number</fullName>
                </value>
                <value>
                    <fullName>Materials</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Photos</fullName>
                </value>
                <value>
                    <fullName>Safety/MSDS</fullName>
                </value>
                <value>
                    <fullName>Weight</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Refund_Deposit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Refund Deposit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reorder_Count__c</fullName>
        <label>Reorder Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reorder_Reason__c</fullName>
        <label>Reorder Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bugs</fullName>
                </value>
                <value>
                    <fullName>Customer Preference</fullName>
                </value>
                <value>
                    <fullName>Damage</fullName>
                </value>
                <value>
                    <fullName>Defective</fullName>
                </value>
                <value>
                    <fullName>Item Number/Labeling Issue</fullName>
                </value>
                <value>
                    <fullName>Mold</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Replacement_Part_Detail_Count__c</fullName>
        <label>Replacement Part Detail Count</label>
        <summaryForeignKey>Replacement_Part_Detail__c.Case_Line_Item__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Request_Reason__c</fullName>
        <label>Request Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Changed Mind</fullName>
                </value>
                <value>
                    <fullName>Pull from Print for Future Processing</fullName>
                </value>
                <value>
                    <fullName>Pull from Print Ship Via Change</fullName>
                </value>
                <value>
                    <fullName>Pull from Print to Inspect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_By_Gallery__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested By Gallery</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Name</field>
                <operation>startsWith</operation>
                <value>Gallery</value>
            </filterItems>
            <filterItems>
                <field>Account.Name</field>
                <operation>contains</operation>
                <value>0,1,2,3,4,5,6,7,8,9</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Case Line Items</relationshipLabel>
        <relationshipName>Case_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reserve_DC__c</fullName>
        <formula>Line_Number__r.Reserve_DC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reserve DC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Amount__c</fullName>
        <inlineHelpText>Total dollar amount being returned on this Case Line Item.</inlineHelpText>
        <label>Return Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Return_Checklist_Number__c</fullName>
        <label>Return Checklist Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_DC__c</fullName>
        <label>Return DC</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Reason_Description__c</fullName>
        <label>Return Reason Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Return_Reason__c</fullName>
        <label>Return Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arrived Too Late</fullName>
                </value>
                <value>
                    <fullName>Client Pref - No Qlty Issue</fullName>
                </value>
                <value>
                    <fullName>Coordinating Items Not Avail</fullName>
                </value>
                <value>
                    <fullName>Damaged</fullName>
                </value>
                <value>
                    <fullName>Damaged - MOS</fullName>
                </value>
                <value>
                    <fullName>Defective</fullName>
                </value>
                <value>
                    <fullName>Defective - MOS</fullName>
                </value>
                <value>
                    <fullName>Gift</fullName>
                </value>
                <value>
                    <fullName>Not As Shown</fullName>
                </value>
                <value>
                    <fullName>Parts/Assembly Issue</fullName>
                </value>
                <value>
                    <fullName>Personalization Qlty Issue</fullName>
                </value>
                <value>
                    <fullName>Qlty Not As Expected</fullName>
                </value>
                <value>
                    <fullName>Swatch Return</fullName>
                </value>
                <value>
                    <fullName>Wrong Item/Qty Ordered</fullName>
                </value>
                <value>
                    <fullName>Wrong Item/Qty Rec&apos;d</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Return_Type__c</fullName>
        <label>Return Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MIS-SHIP</fullName>
                </value>
                <value>
                    <fullName>Order Line</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk_Level__c</fullName>
        <label>Risk Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk_Level_icon__c</fullName>
        <formula>if(ispickval( Risk_Level__c, &quot;Red&quot;),IMAGE(&quot;/resource/Error&quot;, &quot;error&quot;), 
if(ispickval( Risk_Level__c, &quot;Green&quot;),IMAGE(&quot;/resource/Confirm&quot;, &quot;confirm32&quot;), 
if(ispickval( Risk_Level__c, &quot;Yellow&quot;),IMAGE(&quot;/resource/Warning&quot;, &quot;warning32&quot;),&quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPO__c</fullName>
        <formula>Line_Number__r.Drop_Ship__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SPO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ST_Address__c</fullName>
        <description>Ship To address - automatically populated by trigger at record creation from the associated Order Line.</description>
        <label>ST_Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ST_Day_Phone__c</fullName>
        <description>Ship To Day Phone - automatically populated by trigger at record creation from the associated Order Line.</description>
        <label>ST Day Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ST_Email__c</fullName>
        <description>Ship To Email - automatically populated by trigger at record creation from the associated Order Line.</description>
        <label>ST Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ST_Name__c</fullName>
        <description>Ship To name - automatically populated by trigger at record creation from the associated Order Line.</description>
        <label>ST Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ST_Night_Phone__c</fullName>
        <description>Ship To Night Phone - automatically populated by trigger at record creation from the associated Order Line.</description>
        <label>ST Night Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ship_Date__c</fullName>
        <formula>Line_Number__r.Ship_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address_2__c</fullName>
        <formula>Ship_To__r.Ship_to_Address_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship to Address 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To</label>
        <referenceTo>Ship_To__c</referenceTo>
        <relationshipLabel>Case Line Items</relationshipLabel>
        <relationshipName>Case_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_to_Address_1__c</fullName>
        <formula>Ship_To__r.Ship_to_Address_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship to Address 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Address__c</fullName>
        <formula>Line_Number__r.Ship_to_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship to Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_City__c</fullName>
        <formula>Ship_To__r.Ship_to_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship to City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Company__c</fullName>
        <formula>Ship_To__r.Ship_to_Company__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship to Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Country__c</fullName>
        <formula>Ship_To__r.Ship_to_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship to Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Day_Phone__c</fullName>
        <formula>Line_Number__r.Ship_To_Day_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship to Day Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Email__c</fullName>
        <formula>Line_Number__r.Ship_To_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship to Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_First_Name__c</fullName>
        <formula>Ship_To__r.Ship_to_First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship to First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Last_Name__c</fullName>
        <formula>Ship_To__r.Ship_to_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship to Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Name__c</fullName>
        <formula>Line_Number__r.Ship_to_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship to Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Night_Phone__c</fullName>
        <formula>Line_Number__r.Ship_To_Night_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship to Night Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Number__c</fullName>
        <formula>Line_Number__r.Ship_to_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship to Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_State__c</fullName>
        <formula>Ship_To__r.Ship_to_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship to State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Zip__c</fullName>
        <formula>Ship_To__r.Ship_to_Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship to Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipped_DC__c</fullName>
        <formula>Line_Number__r.Shipped_DC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipped DC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Department__c</fullName>
        <label>Sub Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Included__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this accommodation is a price adjustment, or if it is for eligible freight/handling charges, check this box. 

If this accommodation is for a customer experience, leave this box unchecked.</inlineHelpText>
        <label>Tax Included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unapproved_Reason__c</fullName>
        <label>Unapproved Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Already Shipped</fullName>
                </value>
                <value>
                    <fullName>Cannot Monogram</fullName>
                </value>
                <value>
                    <fullName>Invalid Ship Via</fullName>
                </value>
                <value>
                    <fullName>Item is Not First Quality</fullName>
                </value>
                <value>
                    <fullName>Inventory Unavailable</fullName>
                </value>
                <value>
                    <fullName>Customer Preference</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Updated_Ship_To_Flag__c</fullName>
        <formula>IF(OR( NOT(ISBLANK( New_Ship_to_Address_1__c )) , NOT(ISBLANK( New_Ship_to_Address_2__c )) , NOT(ISBLANK( New_Ship_to_City__c )), NOT(ISBLANK( New_Ship_to_State__c )), NOT(ISBLANK( New_Ship_to_Country__c )) , NOT(ISBLANK( New_Ship_to_Zip__c )), NOT(ISBLANK( New_Ship_to_Day_Phone__c )), NOT( ISBLANK( New_Ship_to_Night_Phone__c )), NOT(ISBLANK( New_Ship_to_First_Name__c )), NOT(ISBLANK( New_Ship_to_Last_Name__c )), NOT(ISBLANK( New_Ship_to_Email__c ) )), IMAGE(&quot;/resource/1406921150000/Alert_Flag&quot;, &quot; &quot;,15, 15), &quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Updated Ship To Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Line_Quantity__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if Order Quantity OR Accommodation Quantity is used to calculate the Line Total</description>
        <label>Use Line Quantity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <label>Vendor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Number__c</fullName>
        <label>Vendor Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
</CustomObject>